--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,17 @@
 ul {
   padding-left: 1rem;
 }
+
+.container {
+  display: flex;
+}
+
+.CountryList {
+  margin-right: 2rem;
+  width: 33%;
+}
+
+.CountryList ul {
+  list-style-type: none;
+  padding-left: 0;
+}
